--- a/index.html
+++ b/index.html
@@ -33,9 +33,18 @@
     </section>
 
     <section id="a-propos">
-      <h2>À propos</h2>
-      <p>Je suis Marcian TCHETCHENIGBO, fondateur d'Abomey Works. Fort d’une solide expérience dans l’administration, je mets mon expertise au service de vos besoins : clarté, rigueur, efficacité. Que vous soyez un particulier dépassé par les démarches ou une entreprise ayant besoin de conseils ciblés, je suis là pour vous accompagner.</p>
-    </section>
+  <h2>À propos</h2>
+  <p>
+    Je suis Marcian TCHETCHENIGBO, fondateur d’Abomey Works, une entreprise dédiée à l’accompagnement administratif des particuliers et des entreprises. Fort d’une solide expérience dans le domaine de la comptabilité et de l’administration d’entreprise, j’ai évolué au sein de différentes structures, de la petite entreprise aux environnements plus complexes. Cette diversité m’a permis de comprendre en profondeur les besoins concrets des dirigeants, mais aussi les difficultés que rencontrent les particuliers dans leurs démarches.
+  </p>
+  <p>
+    Que ce soit pour rédiger des documents officiels, comprendre des états financiers, accomplir des formalités auprès des administrations, ou recevoir des conseils personnalisés en gestion, je vous propose un accompagnement rigoureux, confidentiel et humain.
+  </p>
+  <p>
+    Avec Abomey Works, vous bénéficiez d’un interlocuteur unique, disponible et à l’écoute, capable de traduire les obligations administratives en langage simple. Mon objectif est de vous faire gagner du temps, d’éviter les erreurs coûteuses, et de vous permettre de vous concentrer sur l’essentiel : votre vie ou votre activité.
+  </p>
+</section>
+
 
     <section id="services">
       <h2>Nos services</h2>
