--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h2>Contact</h2>
       <p>Pour toute demande ou devis, n'hésitez pas à me contacter :</p>
       <p>Email : <a href="mailto:contact@abomeyworks.com">contact@abomeyworks.com</a></p>
-      <p>Téléphone : 06 XX XX XX XX</p>
+      <p>Téléphone : 07 52 18 66 21</p>
     </section>
 
   </main>
