--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     <section id="contact">
       <h2>Contact</h2>
       <p>Pour toute demande ou devis, n'hésitez pas à me contacter :</p>
-      <p>Email : <a href="mailto:contact@abomeyworks.com">contact@abomeyworks.com</a></p>
+      <div style="text-align:center; margin: 30px 0;">
+  <a href="mailto:neil77160@gmail.com" class="contact-btn">📨 Contact rapide</a>
+</div>
+
       <p>Téléphone : 07 52 18 66 21</p>
     </section>
 
