--- a/index.html
+++ b/index.html
@@ -1,78 +1,59 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Abomey Works - Services Administratifs</title>
-  <link rel="stylesheet" href="style.css"/>
+    <meta charset="UTF-8">
+    <title>Abomey Works</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <img src="logo.png" alt="Logo Abomey Works" class="logo">
+        <h1>Abomey Works</h1>
+        <p>Votre partenaire en démarches administratives et conseils aux entreprises</p>
+    </header>
 
-  <header>
-    <div class="logo-container">
-      <img src="logo.png" alt="Logo Abomey Works">
-      <h1>Abomey Works</h1>
-      <p class="slogan">Votre partenaire administratif de confiance</p>
+    <div style="text-align:center; margin: 30px 0;">
+      <a href="mailto:neil77160@gmail.com" class="contact-btn">📨 Contact rapide</a>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#a-propos">À propos</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-
-    <section id="accueil">
-      <h2>Bienvenue chez Abomey Works</h2>
-      <p>Des solutions administratives claires, efficaces et humaines pour particuliers et entreprises.</p>
-    </section>
 
     <section id="a-propos">
-  <h2>À propos</h2>
-  <p>
-    Je suis Marcian TCHETCHENIGBO, fondateur d’Abomey Works, une entreprise dédiée à l’accompagnement administratif des particuliers et des entreprises. Fort d’une solide expérience dans le domaine de la comptabilité et de l’administration d’entreprise, j’ai évolué au sein de différentes structures, de la petite entreprise aux environnements plus complexes. Cette diversité m’a permis de comprendre en profondeur les besoins concrets des dirigeants, mais aussi les difficultés que rencontrent les particuliers dans leurs démarches.
-  </p>
-  <p>
-    Que ce soit pour rédiger des documents officiels, comprendre des états financiers, accomplir des formalités auprès des administrations, ou recevoir des conseils personnalisés en gestion, je vous propose un accompagnement rigoureux, confidentiel et humain.
-  </p>
-  <p>
-    Avec Abomey Works, vous bénéficiez d’un interlocuteur unique, disponible et à l’écoute, capable de traduire les obligations administratives en langage simple. Mon objectif est de vous faire gagner du temps, d’éviter les erreurs coûteuses, et de vous permettre de vous concentrer sur l’essentiel : votre vie ou votre activité.
-  </p>
-</section>
-
-
-    <section id="services">
-      <h2>Nos services</h2>
-      <ul>
-        <li>Rédaction de courriers et documents administratifs</li>
-        <li>Assistance aux démarches en ligne ou en personne</li>
-        <li>Aide administrative quotidienne pour entreprises</li>
-        <li>Conseils personnalisés pour dirigeants</li>
-        <li>Explication de documents comptables</li>
-        <li>Accompagnement pour formalités avec l'État (URSSAF, impôts, etc.)</li>
-      </ul>
+        <h2>À propos</h2>
+        <p>
+            Je suis Marcian TCHETCHENIGBO, fondateur d’Abomey Works, une entreprise dédiée à l’accompagnement administratif des particuliers et des entreprises. Fort d’une solide expérience dans le domaine de la comptabilité et de l’administration d’entreprise, j’ai évolué au sein de différentes structures, de la petite entreprise aux environnements plus complexes. Cette diversité m’a permis de comprendre en profondeur les besoins concrets des dirigeants, mais aussi les difficultés que rencontrent les particuliers dans leurs démarches.
+        </p>
+        <p>
+            Que ce soit pour rédiger des documents officiels, comprendre des états financiers, accomplir des formalités auprès des administrations, ou recevoir des conseils personnalisés en gestion, je vous propose un accompagnement rigoureux, confidentiel et humain.
+        </p>
+        <p>
+            Avec Abomey Works, vous bénéficiez d’un interlocuteur unique, disponible et à l’écoute, capable de traduire les obligations administratives en langage simple. Mon objectif est de vous faire gagner du temps, d’éviter les erreurs coûteuses, et de vous permettre de vous concentrer sur l’essentiel : votre vie ou votre activité.
+        </p>
     </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Pour toute demande ou devis, n'hésitez pas à me contacter :</p>
-      <div style="text-align:center; margin: 30px 0;">
-  <a href="mailto:neil77160@gmail.com" class="contact-btn">📨 Contact rapide</a>
-</div>
-
-      <p>Téléphone : 07 52 18 66 21</p>
+    <section id="vision">
+        <h2>Notre vision</h2>
+        <p>
+            Abomey Works est née d’un constat simple : trop de personnes, qu’elles soient dirigeantes ou non, se retrouvent démunies face à la complexité administrative française. Nous croyons à une approche humaine, pédagogique et durable. Notre objectif est de rendre l’administratif plus simple, accessible et compréhensible.
+        </p>
+        <p>
+            Notre équipe est animée par des valeurs fortes : la rigueur, la clarté, l’écoute et la réactivité. Notre ambition est de devenir le partenaire privilégié de toutes les personnes qui veulent se libérer de la charge mentale liée aux démarches administratives.
+        </p>
     </section>
 
-  </main>
+    <section id="competences">
+        <h2>Nos compétences</h2>
+        <ul>
+            <li>Formation en comptabilité, gestion d’entreprise et droit administratif</li>
+            <li>Expérience au sein de sociétés privées et dans l’accompagnement de dirigeants</li>
+            <li>Maîtrise des démarches URSSAF, impôts, CFE, création d’entreprise</li>
+            <li>Grande pédagogie dans l’explication de documents complexes</li>
+        </ul>
+    </section>
 
-  <footer>
-    <p>&copy; 2025 Abomey Works – Tous droits réservés</p>
-  </footer>
-
+    <footer>
+        <p>&copy; 2025 Abomey Works - Tous droits réservés</p>
+        <p>Contact : <a href="mailto:neil77160@gmail.com">neil77160@gmail.com</a></p>
+    </footer>
 </body>
 </html>
