--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
     <section id="a-propos">
         <h2>À propos</h2>
-        
+        <p>
+            Je suis Marcian TCHETCHENIGBO, fondateur d’Abomey Works, une entreprise dédiée à l’accompagnement administratif des particuliers et des entreprises. Fort d’une solide expérience dans le domaine de la comptabilité et de l’administration d’entreprise, j’ai évolué au sein de différentes structures, de la petite entreprise aux environnements plus complexes. Cette diversité m’a permis de comprendre en profondeur les besoins concrets des dirigeants, mais aussi les difficultés que rencontrent les pa...
+        </p>
         <p>
             Que ce soit pour rédiger des documents officiels, comprendre des états financiers, accomplir des formalités auprès des administrations, ou recevoir des conseils personnalisés en gestion, je vous propose un accompagnement rigoureux, confidentiel et humain.
         </p>
@@ -32,13 +34,20 @@
     <section id="vision">
         <h2>Notre vision</h2>
         <p>
-            Je suis Marcian TCHETCHENIGBO, fondateur d’Abomey Works, une entreprise dédiée à l’accompagnement administratif des particuliers et des entreprises. Fort d’une solide expérience dans le domaine de la comptabilité et de l’administration d’entreprise, j’ai évolué au sein de différentes structures, de la petite entreprise aux environnements plus complexes. Cette diversité m’a permis de comprendre en profondeur les besoins concrets des dirigeants, mais aussi les difficultés que rencontrent les particuliers dans leurs démarches.
-        </p>
-        <p>
             Abomey Works est née d’un constat simple : trop de personnes, qu’elles soient dirigeantes ou non, se retrouvent démunies face à la complexité administrative française. Nous croyons à une approche humaine, pédagogique et durable. Notre objectif est de rendre l’administratif plus simple, accessible et compréhensible.
         </p>
         <p>
             Notre équipe est animée par des valeurs fortes : la rigueur, la clarté, l’écoute et la réactivité. Notre ambition est de devenir le partenaire privilégié de toutes les personnes qui veulent se libérer de la charge mentale liée aux démarches administratives.
+        </p>
+    </section>
+
+    <section id="fondateur">
+        <h2>Le mot du Fondateur</h2>
+        <p>
+            Je suis Marcian TCHETCHENIGBO, fondateur d’Abomey Works, une entreprise dédiée à l’accompagnement administratif des particuliers et des entreprises.
+            Fort d’une solide expérience dans le domaine de la comptabilité et de l’administration d’entreprise, j’ai évolué au sein de différentes structures,
+            de la petite entreprise aux environnements plus complexes. Cette diversité m’a permis de comprendre en profondeur les besoins concrets des dirigeants,
+            mais aussi les difficultés que rencontrent les particuliers dans leurs démarches.
         </p>
     </section>
 
