--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="fondateur">
         <h2>Le mot du Fondateur</h2>
         <p>
-            Je suis Marcian TCHETCHENIGBO, fondateur d’Abomey Works, une entreprise dédiée à l’accompagnement administratif des particuliers et des entreprises.
+            Marcian TCHETCHENIGBO, fondateur d’Abomey Works, une entreprise dédiée à l’accompagnement administratif des particuliers et des entreprises.
             Fort d’une solide expérience dans le domaine de la comptabilité et de l’administration d’entreprise, j’ai évolué au sein de différentes structures,
             de la petite entreprise aux environnements plus complexes. Cette diversité m’a permis de comprendre en profondeur les besoins concrets des dirigeants,
             mais aussi les difficultés que rencontrent les particuliers dans leurs démarches.
